* overflow fix

--- a/src/assets/styles/scaffolding.css
+++ b/src/assets/styles/scaffolding.css
@@ -12,6 +12,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   background-color: rgb(228, 228, 225);
+  overflow: hidden;
 }
 
 main {
